--- a/Pipfile
+++ b/Pipfile
@@ -3,8 +3,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://test.pypi.org/simple/"
+verify_ssl = true
+name = "testpypi"
+
 [packages]
-mpyl = "==1.0.8"
+mpyl = {version = "==163.1757", index = "testpypi"}
 
 [requires]
 python_version = "3.9"
