--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -24,3 +24,11 @@ jobs:
         env:
           PR_NUMBER: 1234
           MPYL_CONFIG_PATH: mpyl_config.yml
+
+      - name: Build and push
+        if: always()
+        uses: docker/build-push-action@v4
+        with:
+          push: false
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
