--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Check Health
         run: pipenv run health
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker
+
       - name: Run build
         run: pipenv run run
         env:
