--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -19,21 +19,15 @@ jobs:
       - name: Check Health
         run: pipenv run health
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          driver: docker
-
       - name: Run build
         run: pipenv run run
         env:
           PR_NUMBER: 1234
           MPYL_CONFIG_PATH: mpyl_config.yml
 
-      - name: Build and push
+      - name: Clean up
         if: always()
-        uses: docker/build-push-action@v4
-        with:
-          push: false
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: pipenv run clean
+        env:
+          PR_NUMBER: 1234
+          MPYL_CONFIG_PATH: mpyl_config.yml
