--- a/Pipfile
+++ b/Pipfile
@@ -9,11 +9,12 @@ verify_ssl = true
 name = "testpypi"
 
 [packages]
-mpyl = {version = "==163.1759", index = "testpypi"}
+mpyl = {version = "==163.1767", index = "testpypi"}
 
 [requires]
 python_version = "3.9"
 
 [scripts]
+clean = "mpyl build clean"
 health = "mpyl health"
 run = "python mpyl-run.py --local --dryrun --all"
