--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -55,6 +55,7 @@ whiteLists:
     - name: 'K8s-Test'
       values: [ '1.2.3.0', '1.2.3.1' ]
 kubernetes:
+  simulate: true
   rancher:
     cluster:
       test:
