--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -25,6 +25,13 @@ jobs:
           PR_NUMBER: 1234
           MPYL_CONFIG_PATH: mpyl_config.yml
 
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always()
+        with:
+          report_paths: 'projects/**/*test*/*.xml'
+          annotate_only: true
+
       - name: Clean up
         if: always()
         run: pipenv run clean
