--- a/Pipfile
+++ b/Pipfile
@@ -17,4 +17,4 @@ python_version = "3.9"
 [scripts]
 clean = "mpyl build clean"
 health = "mpyl health"
-run = "python mpyl-run.py --local --dryrun --all"
+run = "python mpyl-run.py --local --all"
