Use organization in image path
branch:

--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -18,7 +18,8 @@ jira:
   ticketPattern: '[A-Za-z]{2,}-\d+'
 docker:
   registry:
-    hostName: 'ghcr.io/SamTheisens'
+    hostName: 'ghcr.io'
+    organization: 'SamTheisens'
     userName: !ENV ${DOCKER_REGISTRY_USR:docker_user}
     password: !ENV ${DOCKER_REGISTRY_PSW:docker_password}
   build:
