--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -58,7 +58,7 @@ whiteLists:
     - name: 'K8s-Test'
       values: [ '1.2.3.0', '1.2.3.1' ]
 kubernetes:
-  simulate: true
+  renderTemplates: true
   rancher:
     cluster:
       test:
