--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 name = "testpypi"
 
 [packages]
-mpyl = {version = "==174.1957", index = "testpypi"}
+mpyl = {version = "==174.1961", index = "testpypi"}
 
 [requires]
 python_version = "3.9"
@@ -18,7 +18,7 @@ python_version = "3.9"
 clean = "mpyl build clean"
 health = "mpyl health"
 run = "python mpyl-run.py --local --all"
-run-ci = "python mpyl-run.py"
+run-ci = "python mpyl-run.py --verbose"
 status = "mpyl build status"
 
 
