--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -75,11 +75,11 @@ jobs:
           report_paths: 'projects/**/*test*/*.xml'
           annotate_only: true
 
-      - name: Upload inflated helm charts
+      - name: Upload k8s manifests
         uses: actions/upload-artifact@v3
         with:
-          name: inflated-helm-charts
-          path: projects/**/chart/**
+          name: k8s-manifests
+          path: projects/**/target/kubernetes/**
 
       - name: Clean up
         if: always()
