--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -41,7 +41,8 @@ whiteLists:
     - name: 'K8s-Test'
       values: [ '1.2.3.0', '1.2.3.1' ]
 kubernetes:
-  renderTemplates: true
+  deployAction: KubectlManifest
+  outputPath: target/kubernetes
 project: # default values
   allowedMaintainers: [ 'Team1', 'Team2', 'MPyL' ]
   deployment:
