--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -13,76 +13,104 @@ jobs:
       MPYL_CONFIG_PATH: mpyl_config.yml
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+#      - name: Clone it
+#        run: git clone --shallow-exclude main --single-branch --branch feature/test-174 "https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" .
+#
+#      - name: Git status
+#        run: git status
+#
+#      - name: Show files
+#        run: ls
+
+      - name: Create requirements
+        run: echo $'-i https://test.pypi.org/simple/\n--extra-index-url https://pypi.org/simple \nmpyl==198.2300' > requirements.txt
+
+      - name: Cat
+        run: cat requirements.txt
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pipenv'
-      - name: Install pipenv
-        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
-      - run: pipenv install
+          cache: 'pip'
+#        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl==185.2250
 
-      - name: Check Health
-        run: pipenv run health
+      - name: Install
+        run: pip install -r requirements.txt
+
+      - name: Version
+        run: mpyl version
 
       - uses: jwalton/gh-find-current-pr@v1
         id: findPr
 
-      - name: Show refs
-        run: git show-ref
+      - name: Clean
+        run: rm requirements.txt
 
-      - name: Show log
-        run: git log --oneline --no-abbrev-commit
+      - name: Init
+        run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
-      - name: Show status again
-        run: pipenv run repo
-        env:
-          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+      - name: Status
+        run: mpyl repo status
 
-      - name: Init repo
-        run: pipenv run repo-init
-        env:
-          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+      - name: Status
+        run: mpyl build status
 
-      - name: Show refs
-        run: git show-ref
+#      - run: pipenv install
+#
+#      - name: Check Health
+#        run: pipenv run health
+#
 
-      - name: Show log
-        run: git log --oneline --no-abbrev-commit
-
-      - name: Show diff
-        run: git diff --name-only 96b6be3d121ff1651506da3d6330f7df13c7a959 HEAD
-
-      - name: Show status again
-        run: pipenv run repo
-        env:
-          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-
-      - name: Show status
-        run: pipenv run status
-        env:
-          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-
-      - name: Run build
-        run: pipenv run run
-        env:
-          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: always()
-        with:
-          report_paths: 'projects/**/*test*/*.xml'
-          annotate_only: true
-
-      - name: Upload k8s manifests
-        uses: actions/upload-artifact@v3
-        with:
-          name: k8s-manifests
-          path: projects/**/target/kubernetes/**
-
-      - name: Clean up
-        if: always()
-        run: pipenv run clean
-        env:
-          PR_NUMBER: 1234
+#
+#      - name: Show status again
+#        run: pipenv run repo
+#        env:
+#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+#
+#      - name: Init repo
+#        run: pipenv run repo-init
+#        env:
+#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+#
+#      - name: Show refs
+#        run: git show-ref
+#
+#      - name: Show log
+#        run: git log --oneline --no-abbrev-commit
+#
+#      - name: Show diff
+#        run: git diff --name-only 96b6be3d121ff1651506da3d6330f7df13c7a959 HEAD
+#
+#      - name: Show status again
+#        run: pipenv run repo
+#        env:
+#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+#
+#      - name: Show status
+#        run: pipenv run status
+#        env:
+#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+#
+#      - name: Run build
+#        run: pipenv run run
+#        env:
+#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
+#
+#      - name: Publish Test Report
+#        uses: mikepenz/action-junit-report@v3
+#        if: always()
+#        with:
+#          report_paths: 'projects/**/*test*/*.xml'
+#          annotate_only: true
+#
+#      - name: Upload k8s manifests
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: k8s-manifests
+#          path: projects/**/target/kubernetes/**
+#
+#      - name: Clean up
+#        if: always()
+#        run: pipenv run clean
+#        env:
+#          PR_NUMBER: 1234
