--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -55,62 +55,26 @@ jobs:
       - name: Status
         run: mpyl build status
 
-#      - run: pipenv install
-#
-#      - name: Check Health
-#        run: pipenv run health
-#
+      - name: Run build
+        run: pipenv run run
+        env:
+          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
 
-#
-#      - name: Show status again
-#        run: pipenv run repo
-#        env:
-#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-#
-#      - name: Init repo
-#        run: pipenv run repo-init
-#        env:
-#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-#
-#      - name: Show refs
-#        run: git show-ref
-#
-#      - name: Show log
-#        run: git log --oneline --no-abbrev-commit
-#
-#      - name: Show diff
-#        run: git diff --name-only 96b6be3d121ff1651506da3d6330f7df13c7a959 HEAD
-#
-#      - name: Show status again
-#        run: pipenv run repo
-#        env:
-#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-#
-#      - name: Show status
-#        run: pipenv run status
-#        env:
-#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-#
-#      - name: Run build
-#        run: pipenv run run
-#        env:
-#          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-#
-#      - name: Publish Test Report
-#        uses: mikepenz/action-junit-report@v3
-#        if: always()
-#        with:
-#          report_paths: 'projects/**/*test*/*.xml'
-#          annotate_only: true
-#
-#      - name: Upload k8s manifests
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: k8s-manifests
-#          path: projects/**/target/kubernetes/**
-#
-#      - name: Clean up
-#        if: always()
-#        run: pipenv run clean
-#        env:
-#          PR_NUMBER: 1234
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always()
+        with:
+          report_paths: 'projects/**/*test*/*.xml'
+          annotate_only: true
+
+      - name: Upload k8s manifests
+        uses: actions/upload-artifact@v3
+        with:
+          name: k8s-manifests
+          path: projects/**/target/kubernetes/**
+
+      - name: Clean up
+        if: always()
+        run: pipenv run clean
+        env:
+          PR_NUMBER: 1234
