--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pip'
+          cache: 'pip,pipenv'
 #        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl==185.2250
 
       - name: Install
@@ -49,11 +49,15 @@ jobs:
       - name: Init
         run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
-      - name: Status
+      - name: Repo status
         run: mpyl repo status
 
-      - name: Status
+      - name: Build status
         run: mpyl build status
+
+      - name: Install pipenv
+        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
+      - run: pipenv install
 
       - name: Run build
         run: pipenv run run
