--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -8,46 +8,25 @@ permissions: write-all
 jobs:
   build-pipeline:
     runs-on: ubuntu-latest
+    env:
+      MPYL_VERSION: 241.2784
     steps:
-      - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pipenv'
-      - name: Install pipenv
-        run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
-      - run: pipenv install
 
-      - name: Check Health
-        run: pipenv run health
+      - name: Install MPyL
+        continue-on-error: true
+        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl==${{ env.MPYL_VERSION }}
 
-      - uses: jwalton/gh-find-current-pr@v1
-        id: findPr
+      - name: Initialize repo
+        run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git -p
 
-      - name: Run build
-        run: pipenv run run
-        env:
-          DOCKER_REGISTRY_USR: ${{ github.actor }}
-          DOCKER_REGISTRY_PSW: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ steps.findPr.outputs.pr }}
-          MPYL_CONFIG_PATH: mpyl_config.yml
+      - name: Repo status
+        run: mpyl repo status
 
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: always()
-        with:
-          report_paths: 'projects/**/*test*/*.xml'
-          annotate_only: true
+      - name: Build status
+        run: mpyl build status
 
-      - name: Upload inflated helm charts
-        uses: actions/upload-artifact@v3
-        with:
-          name: inflated-helm-charts
-          path: projects/**/chart/**
-
-      - name: Clean up
-        if: always()
-        run: pipenv run clean
-        env:
-          PR_NUMBER: 1234
-          MPYL_CONFIG_PATH: mpyl_config.yml
+      - name: Build run
+        run: mpyl build run
