--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -1,3 +1,4 @@
+vcs:
 mpylVersion: 1.3.0
 vcs:
   git:
@@ -6,6 +7,13 @@ vcs:
   github:
     repository: 'acme/repo'
     token: !ENV ${GITHUB_TOKEN}
+  artifactRepository:
+    mainBranch: 'main'
+    remote:
+      url: 'https://github.com/SamTheisens/mpyl-example-argocd.git'
+      userName: SamTheisens
+      password: !ENV ${ARGOCD_GITHUB_TOKEN}
+      email: 1911436+SamTheisens@users.noreply.github.com
 docker:
   defaultRegistry: 'ghcr.io'
   registries:
