--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,12 @@ name = "testpypi"
 
 [packages]
 mpyl = {version = "==285.3188", index = "testpypi"}
+pydantic = "==1.10.10"
+
+[dev-packages]
+dagit = "==1.3.14"
+dagster = "==1.3.14"
+pydantic = "==1.10.10"
 
 [requires]
 python_version = "3.9"
@@ -18,3 +24,5 @@ python_version = "3.9"
 clean = "mpyl build clean"
 health = "mpyl health"
 run = "python mpyl-run.py --local --all"
+run-dagster-ci = "python mpyl-dagster-example.py"
+run-dagit = "dagit --workspace workspace.yml"
