fixup! fixup! Add cache repo

--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -13,7 +13,7 @@ vcs:
       userName: SamTheisens
       password: !ENV ${ARGOCD_GITHUB_TOKEN}
       email: 1911436+SamTheisens@users.noreply.github.com
-  cacheRepository:
+  cachingRepository:
     mainBranch: 'main'
     remote:
       url: 'https://github.com/SamTheisens/mpyl-example-argocd.git'
