fixup! fixup! fixup! fixup! fixup! Add cache repo

--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -22,7 +22,7 @@ vcs:
       email: 1911436+SamTheisens@users.noreply.github.com
   argoGithub:
     repository: 'SamTheisens/mpyl-example-argocd'
-    token: !ENV ${GITHUB_TOKEN}
+    token: !ENV ${ARGOCD_GITHUB_TOKEN}
 docker:
   defaultRegistry: 'ghcr.io'
   registries:
