fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Add cache repo

--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -6,7 +6,10 @@ vcs:
   github:
     repository: 'acme/repo'
     token: !ENV ${GITHUB_TOKEN}
-  artifactRepository:
+  argoGithub:
+    repository: 'SamTheisens/mpyl-example-argocd'
+    token: !ENV ${ARGOCD_GITHUB_TOKEN}
+  argoRepository:
     mainBranch: 'main'
     remote:
       url: 'https://github.com/SamTheisens/mpyl-example-argocd.git'
@@ -20,9 +23,6 @@ vcs:
       userName: SamTheisens
       password: !ENV ${ARGOCD_GITHUB_TOKEN}
       email: 1911436+SamTheisens@users.noreply.github.com
-  argoGithub:
-    repository: 'SamTheisens/mpyl-example-argocd'
-    token: !ENV ${ARGOCD_GITHUB_TOKEN}
 docker:
   defaultRegistry: 'ghcr.io'
   registries:
