--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -17,9 +17,13 @@ jobs:
         with:
           python-version: '3.9'
 
+#      - name: Install MPyL
+#        continue-on-error: true
+#        run: pip install mpyl==${{ env.MPYL_VERSION }}
+
       - name: Install MPyL
-        continue-on-error: true
-        run: pip install mpyl==${{ env.MPYL_VERSION }}
+        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl====333.3613
+
 
       - name: Initialize repo
         run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git -p
