--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -22,7 +22,7 @@ jobs:
 #        run: pip install mpyl==${{ env.MPYL_VERSION }}
 
       - name: Install MPyL
-        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl====333.3613
+        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl==333.3613
 
 
       - name: Initialize repo
