--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ verify_ssl = true
 name = "testpypi"
 
 [packages]
-mpyl = {version = "==285.3188", index = "testpypi"}
+mpyl = {version = "==1.6.7", index = "pypi"}
 
 [requires]
 python_version = "3.9"
