--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -21,14 +21,14 @@ jobs:
         continue-on-error: true
         run: pip install mpyl==${{ env.MPYL_VERSION }}
 
-      - name: Initialize repo
-        run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git -p
+#      - name: Initialize repo
+#        run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git -p
 
       - name: MPyL health
         run: mpyl health --ci
 
-      - name: Repo status
-        run: mpyl repo status
+#      - name: Repo status
+#        run: mpyl repo status
 
       - name: Build status
         run: mpyl build status
