--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -6,7 +6,7 @@ vcs:
   github:
     repository: 'acme/repo'
     token: !ENV ${GITHUB_TOKEN}
-  artifactRepository:
+  argoRepository:
     mainBranch: 'main'
     remote:
       url: 'https://github.com/SamTheisens/mpyl-example-argocd.git'
@@ -50,6 +50,11 @@ whiteLists:
     - name: 'K8s-Test'
       all: ['1.2.3.0', '1.2.3.1']
 kubernetes:
+  deploymentStrategy:
+    rollingUpdate:
+      maxUnavailable: "25%"
+      maxSurge: "25%"
+    type: "RollingUpdate"
   deployAction: KubectlManifest
 project: # default values
   allowedMaintainers: ['Team1', 'Team2', 'MPyL']
