Fix project.yml to match current schema

--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -23,6 +23,11 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: 'origin/main'
+
+      - name: Checkout
+        uses: actions/checkout@v4
 
 #      - name: Initialize repo
 #        run: mpyl repo init -b ${{ github.ref }} -u https://${{ env.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git -p
