--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -1,6 +1,7 @@
-mpylVersion: 1.3.0
+mpylVersion: 1.3.1
 vcs:
   git:
+    projectSubFolder: "component"
     mainBranch: 'main'
     ignorePatterns: ['*.md', '*.svg']
     remote:
@@ -71,11 +72,35 @@ kubernetes:
       maxUnavailable: "25%"
       maxSurge: "25%"
     type: "RollingUpdate"
+  defaultCluster:
+    pr: 'test'
+    test: 'test'
+    acceptance: 'acce'
+    production: 'prod'
+  clusters:
+    - name: 'test'
+      clusterId: c-xxxxx
+      clusterEnv: test
+      context: digital-k8s-test
+    - name: 'other-test'
+      clusterEnv: test-other
+      context: digital-k8s-test-other
+    - name: 'acce'
+      clusterId: c-zzzzz
+      clusterEnv: acce
+      context: digital-k8s-acce
+    - name: 'prod'
+      clusterId: c-ccccc
+      clusterEnv: prod
+      context: digital-k8s-prod
   deployAction: KubectlManifest
 project: # default values
   allowedMaintainers: ['Team1', 'Team2', 'MPyL']
   deployment:
     kubernetes:
+      rancher:
+        projectId:
+          all: test1234
       job:
         ttlSecondsAfterFinished:
           all: 3600
