--- a/mpyl_config.yml
+++ b/mpyl_config.yml
@@ -1,7 +1,7 @@
 mpylVersion: 1.3.1
 vcs:
   git:
-    projectSubFolder: "component"
+    projectSubFolder: ".component"
     mainBranch: 'main'
     ignorePatterns: ['*.md', '*.svg']
     remote:
