--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install MPyL
         continue-on-error: true
-        run: pip install mpyl==${{ env.MPYL_VERSION }}
+        run: pip install -i https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple mpyl==451.4230
 
       - name: MPyL health
         run: mpyl health --ci
