Add required rancher property

--- a/projects/job/.component/project.yml
+++ b/projects/job/.component/project.yml
@@ -8,6 +8,9 @@ stages:
   deploy: "Kubernetes Job Deploy"
 deployment:
   namespace: job
+  rancher:
+    projectId:
+      all: "p-11111"
   kubernetes:
     job:
       cron:
