--- a/projects/sbt-service/.component/project.yml
+++ b/projects/sbt-service/.component/project.yml
@@ -15,6 +15,9 @@ deployment:
         acceptance: "Acceptance"
         production: "Production"
   kubernetes:
+    rancher:
+      projectId:
+        all: "p-11111"
     livenessProbe:
       path:
         all: /health
