Add dagster-ci runner

--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,8 @@ mpyl = {version = "==451.4230", index = "testpypi"}
 python_version = "3.9"
 
 [scripts]
-#dagster = "dagster dev -f mpyl-dagster-example.py -d /tmp/dagster"
+dagster-dev = "dagster dev -f mpyl-dagster-example.py -d /tmp/dagster"
+dagster-ci = "dagster job execute -f mpyl-dagster-example.py -a run_build"
 clean = "mpyl build clean"
 health = "mpyl health"
 run = "python mpyl-run.py --local --all"
