--- a/mpyl-dagster-example.yml
+++ b/mpyl-dagster-example.yml
@@ -8,3 +8,7 @@ execution:
       max_concurrent: 4
       start_method:
         forkserver: {}
+loggers:
+  console:
+    config:
+      log_level: WARNING
