--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,8 @@ verify_ssl = true
 name = "testpypi"
 
 [packages]
-mpyl = {version = "==451.4230", index = "testpypi"}
+mpyl = { version = "==480.4268", index = "testpypi" }
+
 
 [requires]
 python_version = "3.9"
@@ -19,7 +20,7 @@ dagster-dev = "dagster dev -f mpyl-dagster-example.py -d /tmp/dagster"
 dagster-ci = "dagster job execute -f mpyl-dagster-example.py -a run_build"
 clean = "mpyl build clean"
 health = "mpyl health"
-run = "python mpyl-run.py --local --all"
+run = "python run.py"
 
 [dev-packages]
 dagster = "==1.8.7"
