--- a/.github/workflows/build-mpyl-pipeline.yml
+++ b/.github/workflows/build-mpyl-pipeline.yml
@@ -26,6 +26,12 @@ jobs:
           cache-dependency-path: |
             Pipfile.lock
 
+      - uses: actions/setup-java@v2
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: gradle
+
       - name: Install pipenv
         run: pip install pipenv
 
