--- a/projects/gradle1/.component/project.yml
+++ b/projects/gradle1/.component/project.yml
@@ -2,5 +2,6 @@ name: 'gradle1'
 maintainer: ['MPyL']
 stages:
   build: Gradle Build
+  test: Gradle Test
 mpylVersion: 1.0.10
 description: 'Demonstrates gradle build via plugin'
